@@ -6,12 +6,15 @@ $ V1.4 Release
  - fixed problems in showing ingame shadows when in 32 bit color mode
  - fixed crash on exit the game
  - fixed problem where when in windowed mode the game window was not centered
+ - fixed - changing sound/music volume on fullscreen was almost impossible because of the fast gfx rendering. No the volume changes
+           step by step. 
  - changed - To prevent problems on Linux systems the game will start in windowed mode by default.
              Use F11 when playing to toggle fullscreen mode or start the game with a command line parameter '-force-fullscreen'.
              NOTE: Fullscreen may crash your Linux desktop. So, far problems where detected only on KDE.
  - changed - the game will now always try to go for hardware surface for better performace. If you want to run
              with software surfaces use the '-sw' command line parameter.
  - added support for Linux systems. The game can now be compiled and run on Linux. 
+ - added - escape key now exists the game when in main menu
 
 $ V1.03 Patch
  - fixed sound-conflicts that caused the game to crash under win2k and XP systems
